[] Now no longer complains about WTS service in Windows systems earlier
than Windows XP.
[] Filters containing tests on the entry type now exported to XML
correctly.

New Features for 3.19.1
=======================
[2881604] Allow edit of base entry of a shortcut via the Edit menu and/or
by right-clicking on a shortcut entry.
[2872273] Improve Import Text 'Line skipped' message.

Changes to Existing Features in 3.19.1
======================================
[2868278] The SystemTray Unlock menu item now, if the correct passphrase is
given, only unlocks the databse. To show the application, use the Restore
menu item.
[2874520] To prevent junk showing in the Notes field in List View due to end
of line characters, now only show the first line but indicate more are there using
[>>>] at end of line. Setting preference "Show Notes as Tooltips in Tree & List
View" will show these (up to 250 characters).

Bugs fixed in 3.19
==================
[2865116] Status-Bar message now correctly states "Password Copied"
when doing a "Run Command".
[2865116] Status-Bar message now updated when using the keyboard arrows
to transverse entries in Tree and List views.
[2856750] The Password Policy now correctly displayed in List View,
when selected.
[2856051] Changes to database preferences are no longer lost upon minimize.
[2856410] The "Run Command" menu entry is no longer greyed out for
Shortcuts to base entries with a Run Command.
[2851848] Mouse double-click interval removed from Virtual Keyboard
to allow multiple virtual keys to be entered quickly.
[2850907] Password field no longer cleared after focus change.
[2842700] No longer crashes when using a French keyboard.
[2192490, 2840534] Multiple desktops now handled correctly for Windows
XP and later system.
[2836569] Correct password data now copied from Edit dialog using
'Smart Labels'
[2832991] Double-click action display in the Status Bar now shows
correct value for entries that have overriden the current default.